# alibabacloud-analyticdb-mysql-connectors

./: .gitignore  AnalyticDB.MySQL.pq  AnalyticDB.MySQL.proj  AnalyticDB.MySQL.query.pq  README.md  resources.resx
adb-parquet-import/: README.md  adb_parquet_import.py  test_converters.py  test_dry_run.py
analyticdb-mysql-cli/: .gitignore  README.md  README_CN.md  pyproject.toml
analyticdb-mysql-cli/src/analyticdb_mysql_cli/: connection.py  logger.py  main.py  output.py
analyticdb-mysql-cli/src/analyticdb_mysql_cli/commands/: profile.py  relations.py  schema.py  sql.py
analyticdb-mysql-cli/tests/: test_connection.py  test_logger.py  test_masking.py  test_output.py  test_profile.py  test_relations.py  test_schema_hidden.py  test_sql_parsing.py
analyticdb-mysql-connector-power-bi/: README.md
analyticdb-mysql-connector-power-bi/AnalyticDB.MySQL/: AnalyticDB.MySQL.pq  AnalyticDB.MySQL.query.pq  resources.resx
resource/: ecommerce_demo.sql
skills/analyticdb-mysql-cli/: SKILL.md
